--- a/frontend/src/js/components/PlotInspector/PlotInspector.scss
+++ b/frontend/src/js/components/PlotInspector/PlotInspector.scss
@@ -8,8 +8,14 @@
 }
 
 .tools-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
     margin-top: 5px;
     margin-left: 7px;
+    p{
+        display: inline;
+    }
 }
 
 .glyphicon.green{
