Adds css to fix buttons when focused. Changes tour text of last tooltip from 'Last' to 'Finish' to better indicate that the tour is over.

--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -44,6 +44,15 @@
 button:focus {
     outline: 0 !important;
 }
+
+.btn-default:focus {
+    /* Fixes issue where buttons appear to stay pressed when clicked */
+    color: #333;
+    background-color: #fff;
+    border-color: #ccc;
+    outline: 0;
+}
+
 .no-bullets {
     list-style-type: none;
 }
