Adds contact us link in help. Adds check for supported editors

--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -451,3 +451,7 @@ li.tree-leaf {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+div.contact-us-link {
+    margin-top: 10px;
+}
