Fixes drag and drop not including dropdown. Clean up css some more

--- a/frontend/src/js/components/modals/CachedFiles/CachedFiles.scss
+++ b/frontend/src/js/components/modals/CachedFiles/CachedFiles.scss
@@ -30,7 +30,7 @@ div.dimension-slider div.slider.slider-horizontal {
     padding-bottom: 20px;
     flex: 1;
     display: inline-flex;
-    align-items: center;
+    align-items: flex-end;
 
     .axis-name {
         width:14%;
