Avg std on axis (#301)
* Begins implementing std and avg on axis

* Adjusts css

* Fixes drag and drop not including dropdown. Clean up css some more

* Fixes memory leak due to left over subscriptions

* Makes axis transforms work with edit modal.

* Adds testing for AxisTransform component.

--- a/frontend/src/js/components/modals/CachedFiles/CachedFiles.scss
+++ b/frontend/src/js/components/modals/CachedFiles/CachedFiles.scss
@@ -20,22 +20,35 @@ div.dimension-slider div.slider.slider-horizontal {
     width: 100%;
 }
 
+.axis {
+    display: flex;
+    align-items: center;
+}
+
 .dimensions .dimension {
     padding-top: 15px;
     padding-bottom: 20px;
-    display: flex;
-    align-items: center;
+    flex: 1;
+    display: inline-flex;
+    align-items: flex-end;
+
+    .axis-name {
+        width:14%;
+        word-break: break-all; /* in case break-word isnt supported */
+        word-break: break-word;
+    }
 
     .sort {
         cursor: ns-resize;
         color: #bbb;
-        width: 5%;
+        margin-left: 2%;
+        margin-right: 2%;
         padding-right: 0;
         font-size: 15px;
     }
 
     .right-content {
-        width: 70%;
+        flex: 1;
         padding-left: 0;
 
         &::after {
