--- a/frontend/src/js/components/modals/Calculator/Calculator.scss
+++ b/frontend/src/js/components/modals/Calculator/Calculator.scss
@@ -1,4 +1,3 @@
-
 $numeric-button-lighter-color: rgb(233, 246, 255);
 $numeric-button-darker-color: rgb(135, 183, 214);
 $numeric-button-hover-color: rgb(84, 155, 203);
@@ -11,42 +10,77 @@ $math-button-lighter-color: rgb(255, 245, 223);
 $math-button-darker-color: rgb(255, 245, 132);
 $math-button-hover-color: rgb(222, 210, 83);
 
-.main-container{
+.main-container {
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 250px 250px;
+    grid-template-columns: 2fr 7fr;
+    grid-template-rows: 80px 320px;
+    grid-column-gap: 15px;
 }
-.variable-list{
+.variable-list {
     grid-column: 1 / 2;
-    grid-row: 1 / 2; 
+    grid-row: 1 / 3;
+    height: 100%;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+    .scroll-area {
+        border: 1px #d3d3d373 solid;
+    }
 }
-.operation-list {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3; 
+// .operation-list {
+//     grid-column: 1 / 2;
+//     grid-row: 2 / 3;
+// }
+.input-area {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: lightgray 1px solid;
+    border-left: lightgray 1px solid;
+    border-right: lightgray 1px solid;
+    border-bottom: lightgray 1px solid;
+    .input-wrapper {
+        display: flex;
+        width: 80%;
+        margin-bottom: 5px;
+        input {
+            font-size: 18px;
+        }
+        .new-variable-name {
+            flex-grow: 1;
+        }
+        span.equals {
+            margin: 0 5px;
+        }
+        .calculation {
+            flex-grow: 5;
+            background-color: rgba(128, 128, 128, 0.149);
+        }
+    }
 }
-.input-container {
-    grid-column: 2 / 3; 
-    grid-row: 1 / 2; 
-}
-.calculator-buttons{
-    grid-column: 2 / 3; 
-    grid-row: 2 / 3; 
+.calculator-buttons {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    border-bottom: lightgray 1px solid;
+    border-left: lightgray 1px solid;
+    border-right: lightgray 1px solid;
 }
 
-
-
-button.calc-button{
+button.calc-button {
     width: 100%;
     font-size: 15px;
     font-weight: 700;
-    &.numeric{
+    &.numeric {
         background: $numeric-button-lighter-color;
         background-image: -webkit-linear-gradient(top, $numeric-button-lighter-color, $numeric-button-darker-color);
         background-image: -moz-linear-gradient(top, $numeric-button-lighter-color, $numeric-button-darker-color);
         background-image: -ms-linear-gradient(top, $numeric-button-lighter-color, $numeric-button-darker-color);
         background-image: -o-linear-gradient(top, $numeric-button-lighter-color, $numeric-button-darker-color);
         background-image: linear-gradient(to bottom, $numeric-button-lighter-color, $numeric-button-darker-color);
-        &:hover{
+        &:hover {
             background: $numeric-button-lighter-color;
             background-image: -webkit-linear-gradient(top, $numeric-button-lighter-color, $numeric-button-hover-color);
             background-image: -moz-linear-gradient(top, $numeric-button-lighter-color, $numeric-button-hover-color);
@@ -55,14 +89,14 @@ button.calc-button{
             background-image: linear-gradient(to bottom, $numeric-button-lighter-color, $numeric-button-hover-color);
         }
     }
-    &.save-clear{
+    &.save-clear {
         background: $save-clear-button-lighter-color;
         background-image: -webkit-linear-gradient(top, $save-clear-button-lighter-color, $save-clear-button-darker-color);
         background-image: -moz-linear-gradient(top, $save-clear-button-lighter-color, $save-clear-button-darker-color);
         background-image: -ms-linear-gradient(top, $save-clear-button-lighter-color, $save-clear-button-darker-color);
         background-image: -o-linear-gradient(top, $save-clear-button-lighter-color, $save-clear-button-darker-color);
         background-image: linear-gradient(to bottom, $save-clear-button-lighter-color, $save-clear-button-darker-color);
-        &:hover{
+        &:hover {
             background: $save-clear-button-lighter-color;
             background-image: -webkit-linear-gradient(top, $save-clear-button-lighter-color, $save-clear-button-hover-color);
             background-image: -moz-linear-gradient(top, $save-clear-button-lighter-color, $save-clear-button-hover-color);
@@ -71,14 +105,14 @@ button.calc-button{
             background-image: linear-gradient(to bottom, $save-clear-button-lighter-color, $save-clear-button-hover-color);
         }
     }
-    &.math{
+    &.math {
         background: $math-button-lighter-color;
         background-image: -webkit-linear-gradient(top, $math-button-lighter-color, $math-button-darker-color);
         background-image: -moz-linear-gradient(top, $math-button-lighter-color, $math-button-darker-color);
         background-image: -ms-linear-gradient(top, $math-button-lighter-color, $math-button-darker-color);
         background-image: -o-linear-gradient(top, $math-button-lighter-color, $math-button-darker-color);
         background-image: linear-gradient(to bottom, $math-button-lighter-color, $math-button-darker-color);
-        &:hover{
+        &:hover {
             background: $math-button-lighter-color;
             background-image: -webkit-linear-gradient(top, $math-button-lighter-color, $math-button-hover-color);
             background-image: -moz-linear-gradient(top, $math-button-lighter-color, $math-button-hover-color);
